docs: update insight 4 description

--- a/Wrangle_act.html
+++ b/Wrangle_act.html
@@ -21297,7 +21297,7 @@ We use categorical plots, as discovered from here : <a href="https://seaborn.pyd
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Insight-1-:">Insight 1 :<a class="anchor-link" href="#Insight-1-:">&#182;</a></h4><p>Beyond 100 000 favourites count, we have more doggo(2) than puppo(1) and fluffer(1). So it seems that it is better be a doggo to the road to the success here !</p>
+<h4 id="Insight-1-:">Insight 1 :<a class="anchor-link" href="#Insight-1-:">&#182;</a></h4><p>Beyond 100 000 favourites count, we have more doggo(2) than puppo(1) and pupper(1). So it seems that it is better be a doggo to the road to the success here !</p>
 
 </div>
 </div>
@@ -21723,7 +21723,8 @@ In addition to this, sharing the tweet at the end of the day like the doggos her
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>There might me other elements which are not in the scope of this study: colors and the quality of the images.</p>
+<p>We observe in the dataset, that the successful doggo are shared as videos. So this is an important factor because videos transmit emotions. 
+So there might me other elements which are not in the scope of this study: colors and the quality of the images or videos.</p>
 
 </div>
 </div>
@@ -21909,7 +21910,7 @@ In addition to this, sharing the tweet at the end of the day like the doggos her
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1044]:</div>
+<div class="prompt input_prompt">In&nbsp;[165]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Generate the HTML version of this notebook</span>
@@ -21927,7 +21928,7 @@ In addition to this, sharing the tweet at the end of the day like the doggos her
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[1044]:</div>
+    <div class="prompt output_prompt">Out[165]:</div>
 
 
 
